<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">Alarm</string>
    <string name="add_alarm">Add alarm</string>
    <string name="delete_alarm">Delete alarm</string>
    <string name="delete_alarm_confirm">This alarm will be deleted.</string>
    <string name="show_clock">Show clock</string>
    <string name="hide_clock">Hide clock</string>
    <string name="label">Label</string>
    <string name="default_label">Alarm</string>
    <string name="set_alarm">Set alarm</string>
    <string name="enable">Turn on alarm</string>
    <string name="alarm_vibrate">Vibrate</string>
    <string-array name="alarm_repeat">
        <item >Daily</item>
        <item>Weekend</item>
        <item>Custom</item>
    </string-array>
    <string name="alert">Ringtone</string>
    <string name="time">Time</string>
    <string name="alert_title">Alarm</string>
    <string name="alarm_alert_dismiss_text">Dismiss</string>
    <string name="alarm_alert_alert_silenced">Alarm silenced after <xliff:g id="minutes">%d</xliff:g> minutes</string>
    <string name="alarm_alert_snooze_text">Snooze</string>
    <string name="alarm_alert_snooze_set">Snoozing for <xliff:g id="minutes">%d</xliff:g> minutes.</string>
    <string name="alarm_alert_snooze_not_set">Snooze not set -- next alarm set for <xliff:g id="time">%s</xliff:g></string>
    <string name="alarm_set">This alarm is set for <xliff:g id="time_delta">%s</xliff:g> from now.</string>
    <string name="combiner"><xliff:g id="xxx">%1$s</xliff:g><xliff:g id="xxx">%2$s</xliff:g><xliff:g id="xxx">%3$s</xliff:g><xliff:g id="xxx">%4$s</xliff:g><xliff:g id="xxx">%5$s</xliff:g></string>
    <string name="day">"1 day"</string>
    <string name="days">"<xliff:g id="days">%s</xliff:g> days"</string>
    <string name="hour">1 hour</string>
    <string name="hours"><xliff:g id="hours">%s</xliff:g> hours</string>
    <string name="and">" and "</string>
    <string name="space">" "</string>
    <string name="subminute">"less than 1 minute"</string>
    <string name="minute">"1 minute"</string>
    <string name="minutes">"<xliff:g id="minutes">%s</xliff:g> minutes"</string>
    <string name="am">am</string>
    <string name="pm">pm</string>
    <string name="every_day">every day</string>
    <string name="never">Never</string>
    <string name="day_concat">", "</string>
    <string name="clock_instructions">Select a clock to display.</string>
    <string name="error">Alarm not set</string>
    <string name="dberror">Sorry, the alarm could not be set.</string>
    <string name="analog_gadget">Analog clock</string>
    <string-array name="days_of_week">
        <item>Daily</item>
        <item >Weekend</item>
        
        <item>Monday</item>
        
        <item>Tuesday</item>
        
        <item>Wednesday</item>
        
        <item>Thursday</item>
        
        <item>Friday</item>
        
        <item>Saturday</item>
        
        <item>Sunday</item>
        
    </string-array>
    <string-array name="days_of_week1">
        
        
        <item>Monday</item>
        
        <item>Tuesday</item>
        
        <item>Wednesday</item>
        
        <item>Thursday</item>
        
        <item>Friday</item>
        
        <item>Saturday</item>
        
        <item>Sunday</item>
        
    </string-array>
    <string-array name="days_of_week_short">
        
        <item>Mon</item>
        
        <item>Tue</item>
        
        <item>Wed</item>
        
        <item>Thu</item>
        
        <item>Fri</item>
        
        <item>Sat</item>
        
        <item>Sun</item>
    </string-array>
    <string name="settings">Settings</string>
    <string name="alarm_in_silent_mode_title">Alarm in silent mode</string>
    <string name="alarm_in_silent_mode_summary">Play alarm even when the phone is in silent mode</string>
    <string name="alarm_list_empty">No alarms.</string>
    <string name="edit_alarm">Edit alarm</string>
    <string name="preview_alarm">Preview alarm</string>
    <string name="show_clock_summary">Show clock on alarm list screen</string>
    <string name="quickalarm_title">Show Quick Snooze</string>
    <string name="quickalarm_summary">Use Quick Snooze for short timers</string>
    <string name="bedclock_prefs">Bed Clock Preferences</string>
    <string name="bedclock_prefs_summary">Bedside clock for night</string>
    <string name="bedclock_enable">Enable bed clock</string>
    <string name="bedclock_enable_summary">Large clock visible from bed</string>
    <string name="bedclock_wake_lock">Bed clock never sleeps</string>
    <string name="bedclock_wake_lock_summary">Bed clock disables standby if charging</string>
    <string name="alarm_defaults">Alarm Defaults</string>
    <string name="alarm_defaults_summary">Defaults for new alarms and quick snooze</string>
    <string name="about">About</string>
    <string name="about_title">About Alarm</string>
    <string name="app_description">Alarm</string>
    <string name="app_version">1.0</string>
    <string name="about_text">
    </string>
    <string name="alarming_widget">Alarm Clock</string>
    <string name="quick_alarm">Quick Snooze</string>
    <string name="snooze_message_text">Snoozing until %s</string>
    <string name="snooze_dismissed">Snooze dismissed.</string>
    <string name="percent">%</string>
    <string name="milliseconds">ms</string>
    <string name="seconds">seconds</string>
    <string name="minutes_suffix">minutes</string>
    <string name="vibrate_only">Silent Alarm</string>
    <string name="snooze">Snooze</string>
    <string name="snooze_disabled">Snooze disabled</string>
    <string name="duration">Silence After</string>
    <string name="duration_disabled">Never silence</string>
    <string name="crescendo">Crescendo</string>
    <string name="crescendo_disabled">No increase</string>
    <string name="volume">Volume</string>
    <string name="delay">Delay</string>
    <string name="delay_disabled">Dont pause</string>
    <string name="captcha_snooze">Captcha on Snooze</string>
    <string name="captcha_dismiss">Captcha on Dismiss</string>
    <string name="shake_snooze_title">Allow shake to snooze</string>
    <string name="shake_snooze_summary">Shake your phone to trigger snooze</string>
    <string name="daym">M</string>
    <string name="dayt">T</string>
    <string name="dayw">W</string>
    <string name="dayth">T</string>
    <string name="dayf">F</string>
    <string name="daysa">S</string>
    <string name="daysu">S</string>
    <string name="bed_clock">Bed Clock</string>
    <string name="next_animation">Next animation</string>
    <string name="flip_orientation">Flip orientation</string>
    <string-array name="captcha_types">
      <item>Normal</item>
      <item>Floating Snooze</item>
      <item>Math</item>
    </string-array>
    <string-array name="captcha_values">
      <item>0</item>
      <item>1</item>
      <item>2</item>
    </string-array>
    <string name="alarm_temp_prompt">Alarm Temperature</string>
    <string name="alarm_clcok_prompt">Alarm Clock</string>
    <string name="alarm_type_prompt">Alarm Type</string>
    <string name="alarm_tone__prompt">Alarm Tone</string>
    <string name="alarm_ring_background_prompt">Alarm Ring Background</string>
    <string name="alarm_snooze_prompt">Snooze Time</string>
    <string name="alarm_alert_type_prompt">Alert Type</string>
    <string-array name="Alarm_Type">
        <item >Floating Snooze</item>
    </string-array>
    <string-array name="Alarm_temp">
        <item >Celsius</item>
        <item >Fahrenheit</item>
    </string-array>
    <string-array name="Alarm_Clcok">
        <item >Analog</item>
        <item >Digital</item>
    </string-array>
    <string-array name="Alarm_Tone">
        <item >Default</item>
        <item >Ring Tone</item>
        <item >Player</item>
    </string-array>
    <string-array name="Alarm_Ring_Back_ground">
        <item >None</item>
        <item >Images</item>
    </string-array>
    <string-array name="Alarm_Snooze">
        <item >5</item>
        <item >10</item>
        <item >15</item>
        <item >20</item>
        <item >30</item>
     </string-array>
    <string-array name="Alarm_Alert_type">
        <item >Ring</item>
        <item >Vib. and Ring</item>
    </string-array>
    <string-array name="alarm_values">
        <item>0</item>
        <item >1</item>
        <item >2</item>
    </string-array>
    <string-array name="alarm_sound_picker">
        <item>Voice</item>
        <item >Ring Tone</item>
    </string-array>
    <string-array name="alarm_type">
        <item >None</item>
        <item >Floating Snooze</item>
        <item >Mathematical</item>
    </string-array>
    <string-array name="alarm_ring_background">
        <item >None</item>
        <item >Images</item>
    </string-array>
    <string-array name="alarm_snooze">
        <item >5</item>
        <item >10</item>
        <item >15</item>
        <item >20</item>
        <item >30</item>
    </string-array>
    <string-array name="alarm_alert">
        <item >Ring</item>
        <item>Vib. and ring</item>
    </string-array>
</resources>